src/app.css
@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro");

:root {
  --background-color: #fff;
  --text-color-primary: #171717;
  --text-color-secondary: #525252;
  --link-bottom-border: #525252;
  --hr-color: #e5e5e5;
}

body {
  -webkit-font-smoothing: antialiased;
  background-color: var(--background-color);
  color: var(--text-color-primary);
  font-family: "Source Sans Pro", sans-serif;
}

.container {
  width: 100%;
  padding-left: 1rem;
  padding-right: 1rem;
  margin-left: auto;
  margin-right: auto;
}
@media (min-width: 640px) {
  .container {
    width: 600px;
    padding-left: 4rem;
    padding-right: 4rem;
  }
}
@media (min-width: 1024px) {
  .container {
    width: 800px;
  }
}

a {
  color: var(--text-color-primary);
  text-decoration: none;
  font-weight: 400;
  border-bottom: 1px solid var(--link-bottom-border);
}
a:hover {
  font-weight: 600;
  border-bottom: 2px solid var(--link-bottom-border);
}
hr {
  border: 0rem;
  border-top: 0.1rem solid var(--hr-color);
  margin-top: 2rem;
}
blockquote {
  font-style: italic;
  color: var(--text-color-secondary);
  border-left-width: 0.25rem;
  border-left-style: solid;
  border-left-color: #e5e5e5;
  padding-left: 1rem;
  max-width: 95%;
  display: block;
  margin: auto;
}
img {
  display: block;
  margin: auto;
  max-width: 95%;
  max-height: 100%;
}
p {
  line-height: 1.5;
}
aside.remark {
  font-style: italic;
  color: var(--text-color-secondary);
  border-left-width: 0.25rem;
  border-left-style: solid;
  border-left-color: #e5e5e5;
  padding-left: 1rem;
  max-width: 95%;
  display: block;
  margin: auto;
  margin-top: 1rem;
  margin-bottom: 1rem;
}

table {
  max-width: 95%;
  margin: auto;
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 0.9em;
}
thead {
  border-bottom: 1px solid #737373;
}
tr,
th,
td {
  padding: 0.25em 1em;
}
tbody tr:nth-child(odd) {
  background: #f5f5f5;
}
tbody tr:hover {
  background: #e5e5e5;
}
.katex {
  font-size: 1.05em !important;
}
code {
  font-size: 1.1em;
}
p code {
  padding: 0.25em 0.25em;
  color: #c9d1d9;
  background-color: #0d1117;
  border-radius: 3px;
}
pre code.hljs {
  display: block;
  overflow-x: auto;
  padding: 1em;
  border-radius: 3px;
}
code.hljs {
  padding: 3px 5px;
  display: inline;
}
.hljs {
  color: #c9d1d9;
  background: #0d1117;
}
.hljs-doctag,
.hljs-keyword,
.hljs-meta .hljs-keyword,
.hljs-template-tag,
.hljs-template-variable,
.hljs-type,
.hljs-variable.language_ {
  color: #ff7b72;
}
.hljs-title,
.hljs-title.class_,
.hljs-title.class_.inherited__,
.hljs-title.function_ {
  color: #d2a8ff;
}
.hljs-attr,
.hljs-attribute,
.hljs-literal,
.hljs-meta,
.hljs-number,
.hljs-operator,
.hljs-selector-attr,
.hljs-selector-class,
.hljs-selector-id,
.hljs-variable {
  color: #79c0ff;
}
.hljs-meta .hljs-string,
.hljs-regexp,
.hljs-string {
  color: #a5d6ff;
}
.hljs-built_in,
.hljs-symbol {
  color: #ffa657;
}
.hljs-code,
.hljs-comment,
.hljs-formula {
  color: #8b949e;
}
.hljs-name,
.hljs-quote,
.hljs-selector-pseudo,
.hljs-selector-tag {
  color: #7ee787;
}
.hljs-subst {
  color: #c9d1d9;
}
.hljs-section {
  color: #1f6feb;
  font-weight: 700;
}
.hljs-bullet {
  color: #f2cc60;
}
.hljs-emphasis {
  color: #c9d1d9;
  font-style: italic;
}
.hljs-strong {
  color: #c9d1d9;
  font-weight: 700;
}
.hljs-addition {
  color: #aff5b4;
  background-color: #033a16;
}
.hljs-deletion {
  color: #ffdcd7;
  background-color: #67060c;
}

